kubernetes/manifest/base-dev/webui-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-portal-ingress
  namespace: gpt-portal
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:654654365384:certificate/14e75e32-3158-43dc-b422-38eb2dfbc298
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/success-codes: "200-302"
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: pinet-core-alb
    #external-dns.alpha.kubernetes.io/hostname: pinet-core.dev.pressingly.net
spec:
  ingressClassName: alb
  rules:
    - host: gptportal.dev.pressingly.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpt-portal-service
                port:
                  number: 80
